# egm-streamer

./: README.md  config.example.yaml  deployment_strategies.md  egm-detector@.service  egm-streamer@.service  pyproject.toml
egm_state_detector/: capture.py  cli.py  config.py  models.py  refs.py  state_machine.py  streamer.py
egm_state_detector/web/: app.js  index.html
egm_streamer/: api.py  capture.py  cli.py  config.py  detector.py  hasher.py  matcher.py  models.py  notifier.py  streamer.py
egm_streamer/web/: app.js  index.html
sh/: build_refhash.py  camera_rtmp.sh  freegame_classify.py  freegame_ref_agent.py  freegame_snap.sh  freegame_watch.sh  push_rtmp.sh
