[project]
name = "egm-streamer"
version = "0.1.0"
description = "EGM Streamer & State Detector"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "Pillow>=9.0",
    "imagehash>=4.3",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "requests>=2.28",
]
requires-python = ">=3.9"

[project.scripts]
egm-streamer = "egm_streamer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
